added startup and hover animation, created div layout

--- a/index.html
+++ b/index.html
@@ -1,46 +1,71 @@
 <html>
     <head>
+      <meta viewport="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Ubuntu&family=Varela+Round&display=swap" rel="stylesheet">
     </head>
     <body>
-      <div class="navbar">
-        <ul>
-          <li class="item">
-            <a href="#">
-              <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-              <span class="text">Home</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#">
-              <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-              <span class="text">About Me</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#">
-              <span class="icon"><ion-icon name="shapes-outline"></ion-icon></span>
-              <span class="text">Skills and Interests</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#">
-              <span class="icon"><ion-icon name="briefcase-outline"></ion-icon></span>
-              <span class="text">Projects</span>
-            </a>
-          </li>
-          <li class="item">
-            <a href="#">
-              <span class="icon"><ion-icon name="at-circle-outline"></ion-icon></span>
-              <span class="text">Contact Me</span>
-            </a>
-          </li>
-        </ul>
-      </div>
 
+      <a name="home">
+        <div class="navbar">
+          <ul>
+            <li class="item1">
+              <a href="#home">
+                <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                <span class="text">Home</span>
+              </a>
+            </li>
+            <li class="item2">
+              <a href="#about-me">
+                <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                <span class="text">About Me</span>
+              </a>
+            </li>
+            <li class="item3">
+              <a href="#skills-interests">
+                <span class="icon"><ion-icon name="shapes-outline"></ion-icon></span>
+                <span class="text">Skills and Interests</span>
+              </a>
+            </li>
+            <li class="item4">
+              <a href="#projects">
+                <span class="icon"><ion-icon name="briefcase-outline"></ion-icon></span>
+                <span class="text">Projects</span>
+              </a>
+            </li>
+            <li class="item5">
+              <a href="#contact-me">
+                <span class="icon"><ion-icon name="at-circle-outline"></ion-icon></span>
+                <span class="text">Contact Me</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </a>
+      <div class="home">
+        <div class="intro-box"><span id="hello">Hello, I am</span><br><span id="myname">Soumil Sinha</span></div>
+        <div class="intro-box2"><div class="box-glow"></div></div>
+      </div>
+      </a>
+
+      <a name="about-me">
+        <div class="about-me">
+          I am currently pursuing my Bachelor of Technology in Computer Science and Engineering at Indian Institute of Technology, Jodhpur.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat nam harum quis natus incidunt unde facilis, nihil porro aperiam quibusdam officia esse dolor id neque.
+          Apart from that, I am very passionate about music and eSports. 
+
+        </div>
+      </a>
+
+        <div class="skills-interests"></div>
+
+        <div class="projects"></div>
+
+        <div class="contact-me"></div>
+
+        <div class="footer"></div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
