--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </a>
             </li>
             <li class="item3">
-              <a href="#skills-interests">
+              <a href="#skills">
                 <span class="icon"><ion-icon name="shapes-sharp"></ion-icon></span>
 
                 <span class="navbar-headings">Skills and Interests</span>
@@ -63,27 +63,32 @@
         </div>
         </a>
 
-        <a name="about-me">
+        <a name="about-me"><header></header></a>
+
           <div class="about-me">
             <span class="heading">About Me</span><br>
-            <span class="content-text">I am currently pursuing my Bachelor of Technology in Computer Science and Engineering at Indian Institute of Technology, Jodhpur.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat nam harum quis natus incidunt unde facilis, nihil porro aperiam quibusdam officia esse dolor id neque.
+            <span class="content-text">I am currently pursuing my Bachelor of Technology in Computer Science and Engineering at Indian Institute of Technology, Jodhpur.<br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat nam harum quis natus incidunt unde facilis, nihil porro aperiam<br> quibusdam officia esse dolor id neque.
             Apart from that, I am very passionate about music and eSports. </span>
 
           </div>
-        </a>
 
-          <div class="skills-interests">
+        <a name="skills"><header></header></a>
+
+        <div class="skills-interests">
             <span class="heading">Skills and Interests</span><br>
             <span class="content-text">
             </span>
           </div>
+        
 
+          <a name="projects"><header></header></a>
           <div class="projects">
             <span class="heading">Projects</span><br>
             <span class="content-text">
             </span>
           </div>
+        
 
           <!-- <div class="contact-me">
             <span class="heading">Contact Me</span><br>
