--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&family=Ubuntu&family=Varela+Round&display=swap" rel="stylesheet">
     </head>
-    <a name="page-top"><header></header></a>
+    <a name="home"><header></header></a>
     <body>
       
-      <a name="home">
         <div class="navbar">
           <ul>
             <li class="item1">
-              <a href="#page-top">
+              <a href="#home">
                 <span class="icon"><ion-icon name="home-sharp"></ion-icon></span>
                 <span class="navbar-headings">Home</span>
               </a>
@@ -49,7 +48,6 @@
             </li> -->
           </ul>
         </div>
-      </a>
       <!-- <div class="page-content"> -->
         <div class="home">
           <div class="intro-box"><span id="hello">Hello, I am</span><br><span id="myname">Soumil Sinha</span></div>
