--- a/index.html
+++ b/index.html
@@ -50,13 +50,17 @@
         </div>
       <!-- <div class="page-content"> -->
         <div class="home">
-          <div class="intro-box"><span id="hello">Hello, I am</span><br><span id="myname">Soumil Sinha</span></div>
-          <div class="intro-box2"><div class="box-glow"></div></div>
+          <div class="intro-box"><span id="hello">Hello, I am</span><br><span id="myname">Soumil Sinha</span>
+            <div class="intro-box2"><div class="box-glow"></div></div>
+          </div>
+          
           <img class="pfp" src="images/pfp-placeholder.png" alt="Profile Photo">
           <span class="contact-links">
             <span id="link1"><a id="link" href="mailto:sinha.5@iitj.ac.in"><ion-icon name="mail-open-outline"></ion-icon></a></span>
             <span id="link2"><a id="link" href="https://www.instagram.com/soumil.sinha/"><ion-icon name="logo-instagram"></ion-icon></a></span>
             <span id="link3"><a id="link" href="https://github.com/sawmill811"><ion-icon name="logo-github"></ion-icon></a></span>
+            <span id="link4"><a id="link" href="https://www.linkedin.com/in/soumil-sinha-979845204/"><ion-icon name="logo-linkedin"></ion-icon></a></span>
+            
           </span>
         </div>
         </a>
