fixed spacing and navbar issues

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
       <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&family=Ubuntu&family=Varela+Round&display=swap" rel="stylesheet">
       <title>Soumil Sinha</title>
     </head>
-    <a name="home"><header></header></a>
+    
     <body>
-
+      <a name="hi"><header></header></a>
       <!-- <ion-icon name="grid-outline"></ion-icon> menu icon -->
       
         <div class="navbar">
           <ul>
             <li class="item1">
-              <a href="#home">
+              <a href="#">
                 <span class="icon"><ion-icon name="home-sharp"></ion-icon></span>
                 <span class="navbar-headings">Home</span>
               </a>
