fixed zooming issues

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <div class="programming">
                 <img src="images/cpp.png" alt="" class="icon">
                 <img src="images/python.png" alt="" class="icon">
-                <img src="images/matlab.png" alt="" class="icon" style="padding-left: 0.5em">
+                <img src="images/matlab.png" alt="" class="icon" >
               </div>
             </span>
           </div>
