changed about me text

--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
             <div class="heading">About Me</div><br>
             <div class="content">
               
-              <div class="section1"><p>I am currently pursuing my Bachelor of Technology in Computer Science and Engineering at Indian Institute of Technology, Jodhpur.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat nam harum quis natus incidunt unde facilis, nihil porro aperiam quibusdam officia esse dolor id neque.
-                Apart from that, I am very passionate about music and eSports. </p></div>
+              <div class="section1"><p>I am currently pursuing my Bachelor of Technology in Computer Science and Engineering at the Indian Institute of Technology, Jodhpur (Batch of 2020). I completed my schooling at Apeejay School, Noida. I am spending my time picking up new skills along with working on a few projects. When it comes to enjoying my leisure time, I like to play the guitar, produce music or play Valorant with my friends.
+              </p></div>
               <div class="section2">
                 <img class="about-me-pic" src="images/about-me-pic.jpg">
               </div>
