fixed responsiveness, added projects

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             </span> -->
 
             <span class="contact-links">
-              <span id="link1"><a id="link" href="mailto:sinha.5@iitj.ac.in"><img src="images/mail-outline.svg" height="100%" style="max-height: 100px;"></a></span>
-              <span id="link2"><a id="link" href="https://www.instagram.com/soumil.sinha/"><img src="images/logo-instagram.svg" height="100%" style="max-height: 100px;"></ion-icon></a></span>
-              <span id="link3"><a id="link" href="https://github.com/sawmill811"><img src="images/logo-github.svg" height="100%" style="max-height: 100px;"></a></span>
-              <span id="link4"><a id="link" href="https://www.linkedin.com/in/soumil-sinha-979845204/"><img src="images/logo-linkedin.svg" height="100%" style="max-height: 100px;"></a></span>
+              <span id="link1"><a id="link" href="mailto:sinha.5@iitj.ac.in"><img src="images/mail-outline.svg" height="100%"></a></span>
+              <span id="link2"><a id="link" href="https://www.instagram.com/soumil.sinha/"><img src="images/logo-instagram.svg" height="100%"></ion-icon></a></span>
+              <span id="link3"><a id="link" href="https://github.com/sawmill811"><img src="images/logo-github.svg" height="100%"></a></span>
+              <span id="link4"><a id="link" href="https://www.linkedin.com/in/soumil-sinha-979845204/"><img src="images/logo-linkedin.svg" height="100%"></a></span>
             
             </span>
           </div>
@@ -89,7 +89,7 @@
             <div class="heading">About Me</div><br>
             <div class="content">
               
-              <div class="section1"><p>I am currently pursuing my Bachelor of Technology in Computer Science and Engineering at the Indian Institute of Technology, Jodhpur (Batch of 2020). I completed my schooling at Apeejay School, Noida. I am spending my time picking up new skills along with working on a few projects. When it comes to enjoying my leisure time, I like to play the guitar, produce music or play Valorant with my friends.
+              <div class="section1"><p>I am currently pursuing my Bachelor of Technology in Computer Science and Engineering at the Indian Institute of Technology, Jodhpur (Batch of 2024). I completed my schooling at Apeejay School, Noida. I am spending my time picking up new skills along with working on a few projects. When it comes to enjoying my leisure time, I like to play the guitar, produce music or play Valorant with my friends.
               </p></div>
               <div class="section2">
                 <img class="about-me-pic" src="images/about-me-pic.jpg">
@@ -123,12 +123,21 @@
           <div class="projects">
             <span class="heading">Projects</span><br>
             <div class="container">
-              <span id="p1">
-                <span id="logo"></span>
+              <span id="project">
+                <span id="logo" class="pxsort"></span>
                 <span id="title">pxSort</span>
                 <span id="short-desc">A sorting visualiser.</span>
                 <span id="links"><a href="https://github.com/sawmill811/sorting-visualiser"><img height="82%" src="images/logo-github.svg"></a>
                 <a href="https://sawmill811.github.io/sorting-visualiser"><img height="80%" src="images/globe-outline.svg"></a>
+                </span>
+              </span>
+
+              <span id="project">
+                <span id="logo" class="auddle"></span>
+                <span id="title">auddle</span>
+                <span id="short-desc">Audio Wordle Game.</span>
+                <span id="links"><a href="https://github.com/sawmill811/auddle"><img height="82%" src="images/logo-github.svg"></a>
+                <a href="https://sawmill811.github.io/auddle"><img height="80%" src="images/globe-outline.svg"></a>
                 </span>
               </span>
               <!-- <span id="p1"></span> -->
