font size changed

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <span id="project">
                 <span id="logo" class="pxsort"></span>
                 <span id="title">pxSort</span>
-                <span id="short-desc">A sorting visualiser.</span>
+                <span id="short-desc">a sorting visualiser.</span>
                 <span id="links"><a href="https://github.com/sawmill811/sorting-visualiser"><img height="82%" src="images/logo-github.svg"></a>
                 <a href="https://sawmill811.github.io/sorting-visualiser"><img height="80%" src="images/globe-outline.svg"></a>
                 </span>
@@ -135,7 +135,7 @@
               <span id="project">
                 <span id="logo" class="auddle"></span>
                 <span id="title">auddle</span>
-                <span id="short-desc">Audio Wordle Game.</span>
+                <span id="short-desc">audio wordle game.</span>
                 <span id="links"><a href="https://github.com/sawmill811/auddle"><img height="82%" src="images/logo-github.svg"></a>
                 <a href="https://sawmill811.github.io/auddle"><img height="80%" src="images/globe-outline.svg"></a>
                 </span>
