--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
             </span> -->
 
             <span class="contact-links">
-              <span id="link1"><a id="link" href="mailto:sinha.5@iitj.ac.in"><img src="images/mail-outline.svg" height="100%"></a></span>
-              <span id="link2"><a id="link" href="https://www.instagram.com/soumil.sinha/"><img src="images/logo-instagram.svg" height="100%"></ion-icon></a></span>
-              <span id="link3"><a id="link" href="https://github.com/sawmill811"><img src="images/logo-github.svg" height="100%"></a></span>
-              <span id="link4"><a id="link" href="https://www.linkedin.com/in/soumil-sinha-979845204/"><img src="images/logo-linkedin.svg" height="100%"></a></span>
+              <span id="link1"><a id="link" href="resume.pdf"><img src="images/resume.svg" height="80%"></a></span>
+              <span id="link2"><a id="link" href="mailto:sinha.5@iitj.ac.in"><img src="images/mail-outline.svg" height="100%"></a></span>
+              <span id="link3"><a id="link" href="https://www.instagram.com/soumil.sinha/"><img src="images/logo-instagram.svg" height="100%"></ion-icon></a></span>
+              <span id="link4"><a id="link" href="https://github.com/sawmill811"><img src="images/logo-github.svg" height="100%"></a></span>
+              <span id="link5"><a id="link" href="https://www.linkedin.com/in/soumil-sinha-979845204/"><img src="images/logo-linkedin.svg" height="100%"></a></span>
             
             </span>
           </div>
