--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <meta viewport="width=device-width, initial-scale=1">
       <meta name="title" content="Soumil Sinha">
       <meta name="description" content="My Portfolio">
-      <meta name="thumbnail" content="https://raw.githubusercontent.com/sawmill811/sawmill811.github.io/main/images/Untitled.png">
+      <meta name="thumbnail" content="https://raw.githubusercontent.com/sawmill811/sawmill811.github.io/main/images/preview.png">
       <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
