--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
       <meta viewport="width=device-width, initial-scale=1">
-      <meta name="title" content="Soumil Sinha">
-      <meta name="description" content="My Portfolio">
-      <meta name="thumbnail" content="https://raw.githubusercontent.com/sawmill811/sawmill811.github.io/main/images/preview.png">
+      <meta name="og:title" content="Soumil Sinha">
+      <meta name="og:description" content="My Portfolio">
+      <meta name="og:image" content="https://raw.githubusercontent.com/sawmill811/sawmill811.github.io/main/images/preview.png">
       <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
