--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-      <meta viewport="width=device-width, initial-scale=1">
-      <meta property="og:title" content="Soumil Sinha">
-      <meta property="og:description" content="My Portfolio">
-      <meta property="og:image" content="https://raw.githubusercontent.com/sawmill811/sawmill811.github.io/main/images/preview.png">
+      <meta viewport="width=device-width, initial-scale=1" />
+      <meta property="og:title" content="Soumil Sinha" />
+      <meta property="og:description" content="My Portfolio" />
+      <meta property="og:image" content="https://raw.githubusercontent.com/sawmill811/sawmill811.github.io/main/images/preview.PNG" />
       <link rel="stylesheet" href="style.css" type="text/css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
